--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,7 +17,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
-  <title>MySaleNow</title>
+  <title>Now</title>
   <!-- SUI CSS -->
   <link href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.css" rel="stylesheet">
 </head>
